# c--assignment

./: 10th.c  11th.c  1st task.c  1st task.h  2nd task.c  3rd task.c  4th task.c  5th task.c  6th task.c  8th.c  9th.c  CMakeLists.txt  README.md
