cmake_minimum_required(VERSION 3.26)
project(c__assignment)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(.6 "6th task.c")
        add_executable(.1 "1st task.c")
add_executable(2 "2nd task.c")
add_executable(3 "3rd task.c")
add_executable( 4 "4th task.c")
add_executable(5 "5th task.c")
add_executable(7 "7th task.c")
